Credit the authors of pyelasticsearch, from which this project draws.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,31 @@
 Honza Král <honza.kral@gmail.com>
 
+This project also draws upon the work of the pyelasticsearch authors:
+Andrew Harvey
+Boosh
+Brian K. Jones
+Casey Thomas
+Chris Adams
+Daniel Lindsley
+Dave Dash
+Detonavomek
+Erik Rose
+Gavin Carothers
+Hanno Schlichting
+Honza Kral
+j0hnsmith
+Jannis Leidel
+Jason Kraus
+Konark Modi
+kul
+Marc Abramowitz
+Patrick Smith
+Ralf Schmitt
+Ray Holder
+Rémy Hubscher
+Rob Eanes
+Rob Hudson
+Roberto Ur
+Sundar Raman
+Szymon Teżewski
+Will Kahn-Greene
