--- a/AUTHORS
+++ b/AUTHORS
@@ -56,3 +56,4 @@ Alexei Peters <apeters@fargeo.com>
 Michael Gibson <michael.x.gibson@oracle.com>
 Darryl Ring <darryl@darrylring.com>
 Will McGinnis <will@predikto.com>
+Rajiv Bakulesh Shah <brainix@gmail.com>
