--- a/README
+++ b/README
@@ -89,10 +89,13 @@ Simple use-case::
     >>> es.get(index="my-index", doc_type="test-type", id=42)['_source']
     {u'any': u'data', u'timestamp': u'2013-05-12T19:45:31.804229'}
 
-`Full documentation`_.
+`Full documentation`_
 
 .. _Full documentation: https://elasticsearch-py.readthedocs.io/
 
+`Action List`_
+
+.. _Full documentation: https://elasticsearch-py.readthedocs.io/en/master/api.html#indices
 
 Features
 --------
