Renamed the package to elasticsearch5

--- a/README
+++ b/README
@@ -25,45 +25,16 @@ documents, wrapping the document data in user-defined classes.
 Compatibility
 -------------
 
-The library is compatible with all Elasticsearch versions since ``0.90.x`` but you
-**have to use a matching major version**:
-
-For **Elasticsearch 5.0** and later, use the major version 5 (``5.x.y``) of the
-library.
-
-For **Elasticsearch 2.0** and later, use the major version 2 (``2.x.y``) of the
-library.
-
-For **Elasticsearch 1.0** and later, use the major version 1 (``1.x.y``) of the
-library.
-
-For **Elasticsearch 0.90.x**, use a version from ``0.4.x`` releases of the
-library.
-
-The recommended way to set your requirements in your `setup.py` or
-`requirements.txt` is::
-
-    # Elasticsearch 5.x
-    elasticsearch>=5.0.0,<6.0.0
-
-    # Elasticsearch 2.x
-    elasticsearch>=2.0.0,<3.0.0
-
-    # Elasticsearch 1.x
-    elasticsearch>=1.0.0,<2.0.0
-
-    # Elasticsearch 0.90.x
-    elasticsearch<1.0.0
-
-The development is happening on ``master`` and ``2.x`` branches respectively.
+The library is compatible with Elasticsearch ``5.x``. For Elasticsearch ``2.x``
+please use ``elasticsearch2`` and for future releases use ``elasticsearcch``.
 
 Installation
 ------------
 
-Install the ``elasticsearch`` package with `pip
-<https://pypi.python.org/pypi/elasticsearch>`_::
+Install the ``elasticsearch5`` package with `pip
+<https://pypi.python.org/pypi/elasticsearch5>`_::
 
-    pip install elasticsearch
+    pip install elasticsearch5
 
 
 Example use
