add build badge and remove 3.3 Sphinx doesn't play nice with 3.3

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Build Status](https://clients-ci.elastic.co/job/elastic+elasticsearch-py+master/badge/icon)](https://clients-ci.elastic.co/job/elastic+elasticsearch-py+master/)
+
 Python Elasticsearch Client
 ===========================
 
