--- a/README
+++ b/README
@@ -9,9 +9,9 @@ For a more high level client library with more limited scope, have a look at
 `elasticsearch-dsl`_ - a more pythonic library sitting on top of
 ``elasticsearch-py``.
 
-It provides a more convenient and idiomatic way to write and manipulate
-`queries`_. It stays close to the Elasticsearch JSON DSL, mirroring its
-terminology and structure while exposing the whole range of the DSL from Python
+`elasticsearch-dsl`_ provides a more convenient and idiomatic way to write and manipulate
+`queries`_ by mirroring the terminology and structure of Elasticsearch JSON DSL
+while exposing the whole range of the DSL from Python
 either directly using defined classes or a queryset-like expressions.
 
 It also provides an optional `persistence layer`_ for working with documents as
