--- a/docs/guide/connecting.asciidoc
+++ b/docs/guide/connecting.asciidoc
@@ -17,6 +17,7 @@ This section contains code snippets to show you how to connect to various {es}
 providers.
 
 
+[discrete]
 [[auth-ec]]
 ==== Elastic Cloud
 
@@ -38,6 +39,7 @@ es = Elasticsearch(
 ----------------------------
 
 
+[discrete]
 [[auth-http]]
 ==== HTTP Authentication
 
@@ -54,6 +56,7 @@ es = Elasticsearch(
 ----------------------------
 
 
+[discrete]
 [[auth-apikey]]
 ==== ApiKey authentication
 
