--- a/docs/guide/integrations.asciidoc
+++ b/docs/guide/integrations.asciidoc
@@ -22,6 +22,6 @@ https://elasticsearch-py.readthedocs.io/en/latest/connection.html#transport[docu
 [[transport-classes]]
 ==== Transport classes
 
-The `Transform` classes can be used to maintain connection with an {es} cluster. 
+The `Transport` classes can be used to maintain connection with an {es} cluster. 
 For the reference information of these classes, refer to the 
 https://elasticsearch-py.readthedocs.io/en/latest/transports.html[documentation].
