[DOCS] Adds source to snippet.

--- a/docs/guide/examples.asciidoc
+++ b/docs/guide/examples.asciidoc
@@ -101,6 +101,7 @@ print(res['result'])
 You can delete a document by specifying its `index`, and `id` in the `delete()` 
 method:
 
+[source,py]
 ----------------------------
 es.delete(index="test-index", id=1)
 ----------------------------
