Add release notes for 7.13.1 and 7.13.2 to elastic.co/guide

--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,8 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-7-13-2>>
+* <<rn-7-13-1>>
 * <<rn-7-13-0>>
 * <<rn-7-12-1>>
 * <<rn-7-12-0>>
@@ -23,6 +25,25 @@
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
 
+
+[discrete]
+[[rn-7-13-2]]
+=== 7.13.2 (2021-06-21)
+
+* Fixed `Transport.perform_request()` to properly reraise `RecursionError`
+* Fixed `AIOHttpConnection` to no longer send `Accept-Encoding: gzip, deflate` when `http_compress=None`.
+  Instead now sends no `Accept-Encoding` header in the default case
+
+[discrete]
+==== Snapshot
+
+* Added the `snapshot.repository_analyze` API
+
+[discrete]
+[[rn-7-13-1]]
+=== 7.13.1 (2021-06-02)
+
+* Client is compatible with Elasticsearch 7.13.1
 
 [discrete]
 [[rn-7-13-0]]
