--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-7-13-4>>
 * <<rn-7-13-3>>
 * <<rn-7-13-2>>
 * <<rn-7-13-1>>
@@ -26,6 +27,12 @@
 * <<rn-7-0-1>>
 * <<rn-7-0-0>>
 
+
+[discrete]
+[[rn-7-13-4]]
+=== 7.13.4 (2021-07-20)
+
+* Client is compatible with Elasticsearch 7.13.4
 
 [discrete]
 [[rn-7-13-3]]
