Update compatibility matrix to reflect supported versions

--- a/docs/guide/overview.asciidoc
+++ b/docs/guide/overview.asciidoc
@@ -10,37 +10,11 @@ on https://elasticsearch-py.readthedocs.io[Read the Docs].
 [discrete]
 === Compatibility
 
-Current development happens in the master branch.
+Language clients are forward compatible; meaning that clients support communicating
+with greater minor versions of Elasticsearch.
 
-The library is compatible with all Elasticsearch versions since `0.90.x` but you
-**have to use a matching major version**:
-
-For **Elasticsearch 7.0** and later, use the major version 7 (`7.x.y`) of the
-library.
-
-For **Elasticsearch 6.0** and later, use the major version 6 (`6.x.y`) of the
-library.
-
-For **Elasticsearch 5.0** and later, use the major version 5 (`5.x.y`) of the
-library.
-
-For **Elasticsearch 2.0** and later, use the major version 2 (`2.x.y`) of the
-library, and so on.
-
-The recommended way to set your requirements in your `setup.py` or
-`requirements.txt` is::
-
-    # Elasticsearch 7.x
-    elasticsearch>=7,<8
-
-    # Elasticsearch 6.x
-    elasticsearch>=6,<7
-
-    # Elasticsearch 5.x
-    elasticsearch>=5,<6
-
-    # Elasticsearch 2.x
-    elasticsearch>=2,<3
+Elastic language clients are also backwards compatible with lesser supported
+minor Elasticsearch versions.
 
 If you have a need to have multiple versions installed at the same time older
 versions are also released as `elasticsearch2` and `elasticsearch5`.
