Add body field parameters to 'search' API

--- a/docs/guide/examples.asciidoc
+++ b/docs/guide/examples.asciidoc
@@ -67,7 +67,7 @@ The `search()` method returns results that are matching a query:
 
 [source,py]
 ----------------------------
-res = es.search(index="test-index", body={"query": {"match_all": {}}})
+res = es.search(index="test-index", query={"match_all": {}})
 print("Got %d Hits:" % res['hits']['total']['value'])
 for hit in res['hits']['hits']:
     print("%(timestamp)s %(author)s: %(text)s" % hit["_source"])
