Tweak language in compatibility section

--- a/docs/guide/overview.asciidoc
+++ b/docs/guide/overview.asciidoc
@@ -11,10 +11,8 @@ on https://elasticsearch-py.readthedocs.io[Read the Docs].
 === Compatibility
 
 Language clients are forward compatible; meaning that clients support communicating
-with greater minor versions of Elasticsearch.
-
-Elastic language clients are also backwards compatible with lesser supported
-minor Elasticsearch versions.
+with greater or equal minor versions of Elasticsearch. Elasticsearch language clients
+are only backwards compatible with default distributions and without guarantees made.
 
 If you have a need to have multiple versions installed at the same time older
 versions are also released as `elasticsearch2` and `elasticsearch5`.
